--- a/etc/mysql/my.cnf.j2
+++ b/etc/mysql/my.cnf.j2
@@ -11,7 +11,7 @@ collation_server = utf8_general_ci
 query_cache_size = 0
 query_cache_type = 0
 
-{% if 'web' not in group_names %}
+{% if "web" not in group_names %}
 ; Memory usage for InnoDB pool
 innodb_buffer_pool_size = {{ (ansible_memtotal_mb * mysql_memory_perc|default(0.8))|int }}M
 {% endif %}
