--- a/src/Argon/WebBundle/Resources/views/layout.html.twig
+++ b/src/Argon/WebBundle/Resources/views/layout.html.twig
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{{ "Argonbook" }}{% endblock %}</title>
     {% block stylesheets %}
-      {% stylesheets filter="cssrewrite,scss"
-            "../vendor/necolas/normalize.css/normalize.css"
-            "@ArgonWebBundle/Resources/sass/argonbook.scss"
-       %}
+      {% stylesheets filter="cssrewrite,scss" "@ArgonWebBundle/Resources/sass/argonbook.scss" %}
         <link rel="stylesheet" href="{{ asset_url }}">
       {% endstylesheets %}
     {% endblock %}
