--- a/src/Argon/WebBundle/Resources/views/layout.html.twig
+++ b/src/Argon/WebBundle/Resources/views/layout.html.twig
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{{ "Argonbook" }}{% endblock %}</title>
     {% block stylesheets %}
-      {% stylesheets filter="cssrewrite,sass" "@ArgonWebBundle/Resources/sass/argonbook.scss" %}
-        <link rel="stylesheet" href="{{ asset_url }}">
-      {% endstylesheets %}
+      <link rel="stylesheet" href="{{ asset("css/argonbook.css") }}">
     {% endblock %}
     <link href="{{ asset("favicon.ico") }}" rel="icon" type="image/x-icon" />
   </head>
