--- a/etc/php5/php.ini.j2
+++ b/etc/php5/php.ini.j2
@@ -22,6 +22,9 @@
 
   ; Disable the treatment of URLs.
   allow_url_fopen = Off
+
+  ; Disable monitor the source files for changes.
+  apc.stat = 0
 {% endif %}
 
 [Date]
