--- a/src/Argon/GameBundle/Resources/views/Admin/Character/confirmStory.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Admin/Character/confirmStory.html.twig
@@ -4,12 +4,14 @@
 {% block title %}{{ parent() }} - {{ "admin.character.characters"|trans }} - {{ character.name }} - {{ "admin.character.confirm_story"|trans }}{% endblock %}
 
 {% block top %}
-<ol id="breadcrumb">
-  <li><a href="{{ path("admin_dashboard") }}">{{ "admin.dashboard.title"|trans }}</a></li>
-  <li><a href="{{ path("admin_character") }}">{{ "admin.character.characters"|trans }}</a></li>
-  <li>{{ character.name }}</li>
-  <li class="active">{{ "admin.character.confirm_story"|trans }}</li>
-</ol>
+<nav aria-label="{{ "admin.you_are_here"|trans }}" role="navigation">
+  <ul class="breadcrumbs">
+    <li><a href="{{ path("admin_dashboard") }}">{{ "admin.dashboard.title"|trans }}</a></li>
+    <li><a href="{{ path("admin_character") }}">{{ "admin.character.characters"|trans }}</a></li>
+    <li class="disabled">{{ character.name }}</li>
+    <li>{{ "admin.character.confirm_story"|trans }}</li>
+  </ul>
+</nav>
 {% endblock %}
 
 {% block content %}
