--- a/src/Argon/GameBundle/Resources/views/Admin/Character/index.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Admin/Character/index.html.twig
@@ -4,14 +4,16 @@
 {% block title %}{{ parent() }} - {{ "admin.character.characters"|trans }}{% endblock %}
 
 {% block top %}
-<ol id="breadcrumb">
-  <li><a href="{{ path("admin_dashboard") }}">{{ "admin.dashboard.title"|trans }}</a></li>
-  {% if not game %}
-    <li class="active">{{ "admin.character.characters"|trans }}</li>
-  {% else %}
-    <li class="active"><a href="{{ path("admin_character") }}">{{ "admin.character.characters"|trans }}</a> {{ "admin.character.of_game"|trans({"%game%": game.info.fullname}) }}</li>
-  {% endif %}
-</ol>
+<nav aria-label="{{ "admin.you_are_here"|trans }}" role="navigation">
+  <ul class="breadcrumbs">
+    <li><a href="{{ path("admin_dashboard") }}">{{ "admin.dashboard.title"|trans }}</a></li>
+    {% if not game %}
+      <li>{{ "admin.character.characters"|trans }}</li>
+    {% else %}
+      <li><a href="{{ path("admin_character") }}">{{ "admin.character.characters"|trans }}</a> {{ "admin.character.of_game"|trans({"%game%": game.info.fullname}) }}</li>
+    {% endif %}
+  </ul>
+</nav>
 {% endblock %}
 
 {% block content %}
