--- a/src/Argon/UserBundle/Resources/views/Admin/Player/index.html.twig
+++ b/src/Argon/UserBundle/Resources/views/Admin/Player/index.html.twig
@@ -4,10 +4,12 @@
 {% block title %}{{ parent() }} - {{ "admin.player.players"|trans }}{% endblock %}
 
 {% block top %}
-<ol id="breadcrumb">
-  <li><a href="{{ path("admin_dashboard") }}">{{ "admin.dashboard.title"|trans }}</a></li>
-  <li class="active">{{ "admin.player.players"|trans }}</li>
-</ol>
+<nav aria-label="{{ "admin.you_are_here"|trans }}" role="navigation">
+  <ul class="breadcrumbs">
+    <li><a href="{{ path("admin_dashboard") }}">{{ "admin.dashboard.title"|trans }}</a></li>
+    <li>{{ "admin.player.players"|trans }}</li>
+  </ul>
+</nav>
 {% endblock %}
 
 {% block content %}
