--- a/src/Argon/WebBundle/Resources/views/Admin/dashboard.html.twig
+++ b/src/Argon/WebBundle/Resources/views/Admin/dashboard.html.twig
@@ -4,9 +4,11 @@
 {% block title %}{{ parent() }} - {{ "admin.dashboard.title"|trans }}{% endblock %}
 
 {% block top %}
-<ol id="breadcrumb">
-  <li class="active">{{ "admin.dashboard.title"|trans }}</li>
-</ol>
+<nav aria-label="{{ "admin.you_are_here"|trans }}" role="navigation">
+  <ul class="breadcrumbs">
+    <li>{{ "admin.dashboard.title"|trans }}</li>
+  </ul>
+</nav>
 {% endblock %}
 
 {% block content %}
