--- a/src/Argon/WebBundle/Resources/views/layout_admin.html.twig
+++ b/src/Argon/WebBundle/Resources/views/layout_admin.html.twig
@@ -1,7 +1,7 @@
 {% extends "ArgonWebBundle::layout.html.twig" %}
 
 {% block nav %}
-<ul>
+<ul class="menu align-right">
   <li><a href="{{ path("admin_player") }}">{{ "admin.layout.player"|trans }}</a></li>
   <li><a href="{{ path("admin_news") }}">{{ "admin.layout.news"|trans }}</a></li>
   <li><a href="{{ path("admin_character") }}">{{ "admin.layout.character"|trans }}</a></li>
