Compile to Bundle

--- a/src/Argon/WebBundle/Resources/views/layout.html.twig
+++ b/src/Argon/WebBundle/Resources/views/layout.html.twig
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{% block title %}{{ "Argonbook" }}{% endblock %}</title>
     {% block stylesheets %}
-      <link rel="stylesheet" href="{{ asset("css/argonbook.css") }}">
+      <link rel="stylesheet" href="{{ asset("bundles/argonweb/css/argonbook.css") }}">
     {% endblock %}
     <link href="{{ asset("favicon.ico") }}" rel="icon" type="image/x-icon" />
   </head>
