--- a/src/Argon/UserBundle/Resources/views/layout.html.twig
+++ b/src/Argon/UserBundle/Resources/views/layout.html.twig
@@ -1,8 +1,5 @@
 {% extends "ArgonWebBundle::layout.html.twig" %}
 
-{% block header %}{% endblock %}
-{% block footer %}{% endblock %}
-
-{% block wrapper %}
+{% block body %}
   {% block fos_user_content %}{% endblock %}
 {% endblock %}
