--- a/src/Argon/UserBundle/Resources/views/layout.html.twig
+++ b/src/Argon/UserBundle/Resources/views/layout.html.twig
@@ -1,5 +1,23 @@
 {% extends "ArgonWebBundle::layout.html.twig" %}
 
 {% block body %}
-  {% block fos_user_content %}{% endblock %}
+<div class="row align-center align-middle">
+  <div class="medium-6 column">
+    {% if app.request.hasPreviousSession %}
+      {% for class, messages in app.session.flashbag.all() %}
+        {% for message in messages %}
+          <div class="{{ class }} callout">
+            <p>{{ message|trans }}</p>
+          </div>
+        {% endfor %}
+      {% endfor %}
+    {% endif %}
+    <main class="user">
+      {% block fos_user_content %}{% endblock %}
+    </main>
+    <footer>
+      <a href="{{ path("homepage") }}" class="expanded button">{{ "go_back"|trans }}</a>
+    </footer>
+  </div>
+</div>
 {% endblock %}
