--- a/app/assets/scss/argonbook.scss
+++ b/app/assets/scss/argonbook.scss
@@ -39,6 +39,9 @@ $section-space: rem-calc(40);
   color: $black;
   background-color: $white;
   padding: $section-space;
+  label {
+    color: $black;
+  }
 }
 
 main, footer {
