--- a/src/Argon/GameBundle/Resources/views/Character/new.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Character/new.html.twig
@@ -5,7 +5,15 @@
 
 {% block content %}
 <h1>{{ "character.new_title"|trans }}</h1>
-{{ form(form) }}
+<div class="row">
+  <div class="large-4 columns">
+    <h3>{{ game.info.fullname }}</h3>
+    {% if game.info.description[app.request.locale] is defined %}
+      <p>{{ game.info.description[app.request.locale] }}</p>
+    {% endif %}
+  </div>
+  <div class="large-8 columns">{{ form(form) }}</div>
+</div>
 {% endblock %}
 
 {% block stylesheets %}
