--- a/app/assets/scss/argonbook.scss
+++ b/app/assets/scss/argonbook.scss
@@ -33,6 +33,10 @@ $form-label-color:               $body-font-color;
 
 $section-space: rem-calc(40);
 
+.position-1 { font-size: 200%; }
+.position-2 { font-size: 150%; }
+.position-3 { font-size: 100%; }
+
 .off-canvas {
   height: 100%;
 }
