Render news as markdown

--- a/src/Argon/NewsBundle/Resources/views/Block/post.html.twig
+++ b/src/Argon/NewsBundle/Resources/views/Block/post.html.twig
@@ -1,7 +1,7 @@
 <article>
   <h4>{{ post.title }}</h4>
   <main>
-    {{ post.body|nl2br }}
+    {{ post_rendered|raw }}
   </main>
   <footer>
     {{ "news.footer"|trans({"%creator%": post.creator, "%published%": post.publishedAt|date}) }}
