--- a/src/Argon/NewsBundle/Resources/views/Admin/Post/view.html.twig
+++ b/src/Argon/NewsBundle/Resources/views/Admin/Post/view.html.twig
@@ -33,7 +33,7 @@
   </dd>
 
   <dt>{{ "admin.news.body"|trans }}</dt>
-  <dd>{{ post.body|nl2br }}</dd>
+  <dd>{{ post_rendered|raw }}</dd>
 </dl>
 <div class="button-group">
   {% if not post.isPublished %}
