--- a/src/Argon/NewsBundle/Resources/views/Admin/Post/edit.html.twig
+++ b/src/Argon/NewsBundle/Resources/views/Admin/Post/edit.html.twig
@@ -15,5 +15,9 @@
 {% endblock %}
 
 {% block content %}
+{% if preview|default(false) %}
+{{ preview|raw }}
+<hr>
+{% endif %}
 {{ form(form) }}
 {% endblock %}
